src/test/ui/const-generics/issues/issue-61522-array-len-succ.full.stderr
error: constant expression depends on a generic parameter
  --> $DIR/issue-61522-array-len-succ.rs:6:40
   |
LL | pub struct MyArray<const COUNT: usize>([u8; COUNT + 1]);
   |                                        ^^^^^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: constant expression depends on a generic parameter
  --> $DIR/issue-61522-array-len-succ.rs:11:24
   |
LL |     fn inner(&self) -> &[u8; COUNT + 1] {
   |                        ^^^^^^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: aborting due to 2 previous errors

